Bug #1765276: Navigation scrollbar
behatnotneeded

--- a/htdocs/theme/raw/sass/components/_toggles.scss
+++ b/htdocs/theme/raw/sass/components/_toggles.scss
@@ -87,7 +87,7 @@
         border: 0;
         position: absolute;
         right: 10px;
-        top: 6px;
+        top: 5px;
         height: 37px;
         width:42px;
         margin: 0;
